--- a/form.html
+++ b/form.html
@@ -8,16 +8,16 @@
     <header class="page-header">
       <section class="page-header__top-menu">
         <div class="page-header__logo">
-          <a href="#"><img src="http://placehold.it/86x35" width="86" height="35" alt="Интернет-магазин «Мишка»"></a>
+          <a href="index.html"><img src="http://placehold.it/86x35" width="86" height="35" alt="Интернет-магазин «Мишка»"></a>
         </div>
         <nav class="main-nav  main-nav--closed">
           <button class="main-nav__toggle" type="button">Открыть меню</button>
           <div class="main-nav__wrapper">
-            <ul class="main-nav__menu-items">
-              <li class="main-nav__menu-item"><a href="#">Каталог товаров</a></li>
+            <ul class="main-nav__menu-list">
+              <li class="main-nav__menu-item"><a href="catalog.html">Каталог товаров</a></li>
               <li class="main-nav__menu-item"><a href="#">Вязания на заказ</a></li>
             </ul>
-            <ul class="main-nav__user-items">
+            <ul class="main-nav__user-menu">
               <li class="main-nav__user-item"><a class="main-nav__search" href="#">Поиск по сайту</a></li>
               <li class="main-nav__user-item"><a class="main-nav__cart" href="#">Корзина: пока пуста</a></li>
             </ul>
@@ -25,7 +25,7 @@
         </nav>
       </section>
       <section class="page-header__content">
-        <b class="page-header__content-title">Вязание на заказ</b>
+        <h1 class="page-header__content-title">Вязание на заказ</h1>
       </section>
     </header>
     <main>
@@ -73,17 +73,17 @@
       </form>
     </main>
     <footer class="page-footer">
-      <section class="page-footer__social">
+      <div class="page-footer__social">
         <a class="btn-social btn-social--instagram" href="#">Instagram</a>
         <a class="btn-social btn-social--facebook" href="#">Facebook</a>
         <a class="btn-social btn-social--twitter" href="#">Twitter</a>
-      </section>
-      <section class="page-footer__developer">
+      </div>
+      <div class="page-footer__copyright">
         <p>
           Разработано
           <a href="#"><img src="http://placehold.it/27x34" width="27" height="34" alt="HTML Academy"></a>
         </p>
-      </section>
+      </div>
     </footer>
   </body>
 </html>
