--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <nav class="main-nav  main-nav--closed">
           <button class="main-nav__toggle" type="button">Открыть меню</button>
           <div class="main-nav__wrapper">
-            <ul class="main-nav__menu-items">
-              <li class="main-nav__menu-item"><a href="#">Каталог товаров</a></li>
-              <li class="main-nav__menu-item"><a href="#">Вязания на заказ</a></li>
+            <ul class="main-nav__menu-list">
+              <li class="main-nav__menu-item"><a href="catalog.html">Каталог товаров</a></li>
+              <li class="main-nav__menu-item"><a href="form.html">Вязания на заказ</a></li>
             </ul>
-            <ul class="main-nav__user-items">
+            <ul class="main-nav__user-menu">
               <li class="main-nav__user-item"><a class="main-nav__search" href="#">Поиск по сайту</a></li>
               <li class="main-nav__user-item"><a class="main-nav__cart" href="#">Корзина: пока пуста</a></li>
             </ul>
@@ -25,19 +25,19 @@
         </nav>
       </section>
       <section class="page-header__content">
-        <b class="page-header__content-title">Милые штуки ручной работы для дома</b>
+        <h1 class="page-header__content-title">Милые штуки ручной работы для дома</h1>
         <a class="page-header__content-item  page-header__content-item--interior" href="#">Предметы интерьера</a>
         <a class="page-header__content-item  page-header__content-item--toys" href="#">Детские игрушки</a>
       </section>
     </header>
     <main>
-      <section class="goods-week">
-        <h2 class="goods-week__title">Вязанные корзинки</h2>
+      <section class="product-week">
+        <h2 class="product-week__title">Вязанные корзинки</h2>
         <span>товар недели</span>
-        <p class="goods-week__desc">
+        <p class="product-week__desc">
           Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.
         </p>
-        <table class="goods-week__properties">
+        <table class="product-week__properties">
           <tr>
             <td>Цвет:</td>
             <td>«Тиффани»/серый</td>
@@ -52,12 +52,12 @@
           </tr>
         </table>
         <img src="http://placehold.it/260x315" width="260" height="315" alt="Вязанные корзинки">
-        <b class="goods-week__price">Цена: 990 руб.</b>
-        <a class="goods-week__buy  btn" href="#">Заказать</a>
+        <b class="product-week__cy">Цена: 990 руб.</b>
+        <a class="product-week__buy  btn" href="#">Заказать</a>
       </section>
       <section class="about-us">
         <h2 class="about-us__title">Коротко о нас:</h2>
-        <ul class="about-us__items">
+        <ul class="about-us__list-features">
           <li class="about-us__item  about-us__item--ecology">Экологически чистые материалы</li>
           <li class="about-us__item  about-us__item--price">Скандинавский стиль по российской цене</li>
           <li class="about-us__item  about-us__item--like">Увеличивает лайки на фотографиях</li>
@@ -83,7 +83,7 @@
       </section>
       <section class="contacts">
         <h2 class="contacts__title">Контакты</h2>
-        <table class="contacts__table">
+        <table class="contacts__content">
           <tr>
             <td>email:</td>
             <td><a href="#">info@mimimishkashop.ru</a></td>
@@ -98,17 +98,17 @@
       </section>
     </main>
     <footer class="page-footer">
-      <section class="page-footer__social">
+      <div class="page-footer__social">
         <a class="btn-social btn-social--instagram" href="#">Instagram</a>
         <a class="btn-social btn-social--facebook" href="#">Facebook</a>
         <a class="btn-social btn-social--twitter" href="#">Twitter</a>
-      </section>
-      <section class="page-footer__developer">
+      </div>
+      <div class="page-footer__copyright">
         <p>
           Разработано
           <a href="#"><img src="http://placehold.it/27x34" width="27" height="34" alt="HTML Academy"></a>
         </p>
-      </section>
+      </div>
     </footer>
   </body>
 </html>
