--- a/catalog.html
+++ b/catalog.html
@@ -3,76 +3,89 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
       <section class="page-header__top-menu">
-        <div class="page-header__logo">
-          <a href="index.html"><img src="http://placehold.it/86x35" width="86" height="35" alt="Интернет-магазин «Мишка»"></a>
+        <div class="logo">
+          <a class="logo__link" href="index.html"><img src="img/logo-mobile.svg" width="86" height="35" alt="Интернет-магазин «Мишка»"></a>
         </div>
-        <nav class="main-nav  main-nav--closed">
-          <button class="main-nav__toggle" type="button">Открыть меню</button>
+        <nav class="main-nav">
+          <!--button class="main-nav__toggle" type="button">Меню</button-->
           <div class="main-nav__wrapper">
             <ul class="main-nav__menu-list">
-              <li class="main-nav__menu-item"><a href="#">Каталог товаров</a></li>
-              <li class="main-nav__menu-item"><a href="form.html">Вязания на заказ</a></li>
+              <li class="main-nav__menu-item"><a class="main-nav__menu-link" href="catalog.html">Каталог товаров</a></li>
+              <li class="main-nav__menu-item"><a class="main-nav__menu-link" href="form.html">Вязания на заказ</a></li>
             </ul>
-            <ul class="main-nav__user-menu">
-              <li class="main-nav__user-item"><a class="main-nav__search" href="#">Поиск по сайту</a></li>
-              <li class="main-nav__user-item"><a class="main-nav__cart" href="#">Корзина: пока пуста</a></li>
+            <ul class="main-nav__menu-list">
+              <li class="main-nav__menu-item"><a class="main-nav__menu-link  main-nav__menu-link--search" href="#">Поиск по сайту</a></li>
+              <li class="main-nav__menu-item"><a class="main-nav__menu-link  main-nav__menu-link--cart" href="#">Корзина: пока пуста</a></li>
             </ul>
           </div>
         </nav>
       </section>
-      <section class="page-header__content">
-        <h1 class="page-header__content-title">Каталог товаров</h1>
-      </section>
     </header>
     <main>
+      <h1 class="page-title">Каталог товаров</h1>
       <section class="product-catalog">
         <article class="product">
-          <a href="#"><img src="http://placehold.it/260x195" width="260" height="195" alt="Зайчик-попрыгайчик"></a>
+          <a href="#"><img src="img/photo-1-mobile@1x.jpg" width="260" height="195" alt="Зайчик-попрыгайчик"></a>
           <a class="product__title" href="#">Зайчик-попрыгайчик</a>
           <span class="product__properties">Рост 30 см, вес 200 г</span>
           <b class="product__cy">1 200 руб.</b>
-          <a class="product__buy" href="#">Заказать</a>
+          <a class="product__buy" href="#"><img src="img/icon-cart.svg" width="21" height="19" alt="Заказать"></a>
         </article>
         <article class="product">
-          <a href="#"><img src="http://placehold.it/260x195" width="260" height="195" alt="Корзинка для белья"></a>
+          <a href="#"><img src="img/photo-2-mobile@1x.jpg" width="260" height="195" alt="Корзинка для белья"></a>
           <a class="product__title" href="#">Корзинка для белья</a>
           <span class="product__properties">Диаметр 15 см, высота 10 см</span>
           <b class="product__cy">690 руб.</b>
-          <a class="product__buy" href="#">Заказать</a>
+          <a class="product__buy" href="#"><img src="img/icon-cart.svg" width="21" height="19" alt="Заказать"></a>
         </article>
         <article class="product">
-          <a href="#"><img src="http://placehold.it/260x195" width="260" height="195" alt="Большая корзинка для игрушек"></a>
+          <a href="#"><img src="img/photo-3-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек"></a>
           <a class="product__title" href="#">Большая корзинка для игрушек</a>
           <span class="product__properties">Диаметр 30 см, высота 30 см</span>
           <b class="product__cy">1 500 руб.</b>
-          <a class="product__buy" href="#">Заказать</a>
+          <a class="product__buy" href="#"><img src="img/icon-cart.svg" width="21" height="19" alt="Заказать"></a>
         </article>
       </section>
       <section class="production">
         <b class="production__title">Процесс производства</b>
-        <video controls preload="metadata" width="260" height="150" poster="http://placehold.it/260x150"></video>
+        <video controls preload="metadata" width="260" height="150" poster="img/video-mobile@1x.jpg"></video>
         <p class="production__desc">
           По просьбам наших фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
         </p>
-        <a class="production__order  btn" href="#">Сделать заказ</a>
+        <a class="btn production__order" href="#">Сделать заказ</a>
       </section>
     </main>
     <footer class="page-footer">
-      <div class="page-footer__social">
-        <a class="btn-social btn-social--instagram" href="#">Instagram</a>
-        <a class="btn-social btn-social--facebook" href="#">Facebook</a>
-        <a class="btn-social btn-social--twitter" href="#">Twitter</a>
+      <div class="social">
+        <a class="social-btn  social-btn--instagram" href="#">Instagram</a>
+        <a class="social-btn  social-btn--facebook" href="#">Facebook</a>
+        <a class="social-btn  social-btn--twitter" href="#">Twitter</a>
       </div>
-      <div class="page-footer__copyright">
-        <p>
-          Разработано
-          <a href="#"><img src="http://placehold.it/27x34" width="27" height="34" alt="HTML Academy"></a>
-        </p>
+      <div class="copyright">
+        <span class="copyright__text">Разработано</span>
+        <a class="copyright__link" href="htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width="27" height="34" alt="HTML Academy"></a>
       </div>
     </footer>
+    <div class="modal-overlay"></div>
+    <div class="modal-size">
+      <b class="modal-size__title">Добавить в корзину</b>
+      <form class="modal-size__form" action="#" method="post">
+        <p class="modal-size__label">Выберите размер:</p>
+        <div class="modal-size__toggles">
+          <input type="radio" name="product-size" value="size-s" id="size-s" checked>
+          <label for="size-s">S</label>
+          <input type="radio" name="product-size" value="size-m" id="size-m">
+          <label for="size-m">M</label>
+          <input type="radio" name="product-size" value="size-l" id="size-l">
+          <label for="size-l">L</label>
+        </div>
+        <button class="modal-size__add" type="submit">Добавить</button>
+      </form>
+    </div>
   </body>
 </html>
