--- a/index.html
+++ b/index.html
@@ -3,37 +3,40 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
       <section class="page-header__top-menu">
-        <div class="page-header__logo">
-          <a href="#"><img src="http://placehold.it/86x35" width="86" height="35" alt="Интернет-магазин «Мишка»"></a>
+        <div class="logo">
+          <a class="logo__link" href="#"><img src="img/logo-mobile.svg" width="86" height="35" alt="Интернет-магазин «Мишка»"></a>
         </div>
-        <nav class="main-nav  main-nav--closed">
-          <button class="main-nav__toggle" type="button">Открыть меню</button>
+        <nav class="main-nav">
+          <!--button class="main-nav__toggle" type="button">Меню</button-->
           <div class="main-nav__wrapper">
             <ul class="main-nav__menu-list">
-              <li class="main-nav__menu-item"><a href="catalog.html">Каталог товаров</a></li>
-              <li class="main-nav__menu-item"><a href="form.html">Вязания на заказ</a></li>
+              <li class="main-nav__menu-item"><a class="main-nav__menu-link" href="catalog.html">Каталог товаров</a></li>
+              <li class="main-nav__menu-item"><a class="main-nav__menu-link" href="form.html">Вязания на заказ</a></li>
             </ul>
-            <ul class="main-nav__user-menu">
-              <li class="main-nav__user-item"><a class="main-nav__search" href="#">Поиск по сайту</a></li>
-              <li class="main-nav__user-item"><a class="main-nav__cart" href="#">Корзина: пока пуста</a></li>
+            <ul class="main-nav__menu-list">
+              <li class="main-nav__menu-item"><a class="main-nav__menu-link  main-nav__menu-link--search" href="#">Поиск по сайту</a></li>
+              <li class="main-nav__menu-item"><a class="main-nav__menu-link  main-nav__menu-link--cart" href="#">Корзина: пока пуста</a></li>
             </ul>
           </div>
         </nav>
       </section>
-      <section class="page-header__content">
-        <h1 class="page-header__content-title">Милые штуки ручной работы для дома</h1>
-        <a class="page-header__content-item  page-header__content-item--interior" href="#">Предметы интерьера</a>
-        <a class="page-header__content-item  page-header__content-item--toys" href="#">Детские игрушки</a>
-      </section>
     </header>
     <main>
+      <h1 class="page-title  page-title--index-img">Милые штуки ручной работы для дома</h1>
+      <section class="product-type">
+        <ul class="product-type__list">
+          <li><a class="product-type__item  product-type__item--interior" href="#">Предметы<br>интерьера</a></li>
+          <li><a class="product-type__item  product-type__item--toys" href="#">Детские<br>игрушки</a></li>
+        </ul>
+      </section>
       <section class="product-week">
-        <h2 class="product-week__title">Вязанные корзинки</h2>
-        <span>товар недели</span>
+        <h2 class="product-week__title">Вязаные корзинки</h2>
+        <span class="product-week__label">товар недели</span>
         <p class="product-week__desc">
           Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.
         </p>
@@ -51,9 +54,9 @@
             <td>15 см</td>
           </tr>
         </table>
-        <img src="http://placehold.it/260x315" width="260" height="315" alt="Вязанные корзинки">
+        <img src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязанные корзинки">
         <b class="product-week__cy">Цена: 990 руб.</b>
-        <a class="product-week__buy  btn" href="#">Заказать</a>
+        <a class="btn  product-week__buy" href="#">Заказать</a>
       </section>
       <section class="about-us">
         <h2 class="about-us__title">Коротко о нас:</h2>
@@ -69,7 +72,7 @@
       <section class="reviews">
         <h2 class="reviews__title">Отзывы</h2>
         <blockquote class="reviews__item">
-          <p>
+          <p class="reviews__text">
             Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильнее, а также набирают больше лайков!
           </p>
           <cite class="reviews__author-name">Анастасия Красильникова</cite>
@@ -79,36 +82,50 @@
           <a class="reviews__arrow  reviews__arrow--prev" href="#">назад</a>
           <a class="reviews__arrow  reviews__arrow--next" href="#">вперед</a>
         </div>
-        <a class="reviews__write  btn" href="#">Написать</a>
+        <a class="btn  reviews__write" href="#">Написать</a>
       </section>
       <section class="contacts">
         <h2 class="contacts__title">Контакты</h2>
         <table class="contacts__content">
           <tr>
             <td>email:</td>
-            <td><a href="#">info@mimimishkashop.ru</a></td>
+            <td><a class="contacts__content-link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></td>
           </tr>
           <tr>
             <td>адрес:</td>
-            <td>г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</td>
+            <td>г. Санкт-Петербург,<br>ул. Большая Конюшенная,<br>д. 19/8, офис 101</td>
           </tr>
         </table>
-        <img src="http://placehold.it/320x457" width="320" height="457" alt="Интернет-магазин «Мишка»">
-        <a class="contacts__write-us  btn" href="#">Напишите нам</a>
+        <img src="img/map-mobile@1x.jpg" width="320" height="457" alt="Интернет-магазин «Мишка»">
+        <a class="btn  contacts__write-us" href="#">Напишите нам</a>
       </section>
     </main>
     <footer class="page-footer">
-      <div class="page-footer__social">
-        <a class="btn-social btn-social--instagram" href="#">Instagram</a>
-        <a class="btn-social btn-social--facebook" href="#">Facebook</a>
-        <a class="btn-social btn-social--twitter" href="#">Twitter</a>
+      <div class="social">
+        <a class="social-btn  social-btn--instagram" href="#">Instagram</a>
+        <a class="social-btn  social-btn--facebook" href="#">Facebook</a>
+        <a class="social-btn  social-btn--twitter" href="#">Twitter</a>
       </div>
-      <div class="page-footer__copyright">
-        <p>
-          Разработано
-          <a href="#"><img src="http://placehold.it/27x34" width="27" height="34" alt="HTML Academy"></a>
-        </p>
+      <div class="copyright">
+        <span class="copyright__text">Разработано</span>
+        <a class="copyright__link" href="htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width="27" height="34" alt="HTML Academy"></a>
       </div>
     </footer>
+    <div class="modal-overlay"></div>
+    <div class="modal-size">
+      <b class="modal-size__title">Добавить в корзину</b>
+      <form class="modal-size__form" action="#" method="post">
+        <p class="modal-size__label">Выберите размер:</p>
+        <div class="modal-size__toggles">
+          <input type="radio" name="product-size" value="size-s" id="size-s" checked>
+          <label for="size-s">S</label>
+          <input type="radio" name="product-size" value="size-m" id="size-m">
+          <label for="size-m">M</label>
+          <input type="radio" name="product-size" value="size-l" id="size-l">
+          <label for="size-l">L</label>
+        </div>
+        <button class="modal-size__add" type="submit">Добавить</button>
+      </form>
+    </div>
   </body>
 </html>
