--- a/index.html
+++ b/index.html
@@ -7,108 +7,142 @@
   </head>
   <body>
     <header class="page-header">
-      <section class="page-header__top-menu">
-        <div class="logo">
-          <a class="logo__link" href="#"><img src="img/logo-mobile.svg" width="86" height="35" alt="Интернет-магазин «Мишка»"></a>
-        </div>
-        <nav class="main-nav">
-          <!--button class="main-nav__toggle" type="button">Меню</button-->
-          <div class="main-nav__wrapper">
-            <ul class="main-nav__menu-list">
-              <li class="main-nav__menu-item"><a class="main-nav__menu-link" href="catalog.html">Каталог товаров</a></li>
-              <li class="main-nav__menu-item"><a class="main-nav__menu-link" href="form.html">Вязания на заказ</a></li>
-            </ul>
-            <ul class="main-nav__menu-list">
-              <li class="main-nav__menu-item"><a class="main-nav__menu-link  main-nav__menu-link--search" href="#">Поиск по сайту</a></li>
-              <li class="main-nav__menu-item"><a class="main-nav__menu-link  main-nav__menu-link--cart" href="#">Корзина: пока пуста</a></li>
-            </ul>
+      <nav class="main-nav  main-nav--closed  main-nav--nojs">
+        <button class="main-nav__toggle" type="button">Меню</button>
+        <div class="main-nav__wrapper">
+          <div class="logo  logo--header">
+            <a href="#">
+              <img src="img/logo-mobile.svg" width="86" height="35" alt="Интернет-магазин «Мишка»">
+            </a>
           </div>
-        </nav>
-      </section>
+          <ul class="main-nav__menu-list  main-nav__menu-list--main">
+            <li class="main-nav__menu-item">
+              <a class="main-nav__link" href="catalog.html">Каталог товаров</a>
+            </li>
+            <li class="main-nav__menu-item">
+              <a class="main-nav__link" href="form.html">Вязание на заказ</a>
+            </li>
+          </ul>
+          <ul class="main-nav__menu-list  main-nav__menu-list--user">
+            <li class="main-nav__menu-item">
+              <a class="main-nav__link  main-nav__link--search" href="#">Поиск по сайту</a>
+            </li>
+            <li class="main-nav__menu-item">
+              <a class="main-nav__link  main-nav__link--cart" href="#">Корзина: пока пуста</a>
+            </li>
+          </ul>
+          <ul class="main-nav__special">
+            <li class="main-nav__special-item">
+              <a class="main-nav__link" href="#">Новые поступления</a>
+            </li>
+            <li class="main-nav__special-item">
+              <a class="main-nav__link" href="#">Распродажа</a>
+            </li>
+          </ul>
+          <span class="main-nav__label">Бесплатная доставка по России</span>
+        </div>
+      </nav>
     </header>
     <main>
-      <h1 class="page-title  page-title--index-img">Милые штуки ручной работы для дома</h1>
+      <section class="page-title  page-title--index">
+        <h1 class="page-title__label">Милые штуки <br>ручной<br> работы для дома</h1>
+      </section>
       <section class="product-type">
         <ul class="product-type__list">
-          <li><a class="product-type__item  product-type__item--interior" href="#">Предметы<br>интерьера</a></li>
-          <li><a class="product-type__item  product-type__item--toys" href="#">Детские<br>игрушки</a></li>
+          <li class="product-type__item"><a class="product-type__link product-type__link--interior" href="#">Предметы<br>интерьера</a></li>
+          <li class="product-type__item"><a class="product-type__link product-type__link--toys" href="#">Детские<br>игрушки</a></li>
         </ul>
       </section>
       <section class="product-week">
-        <h2 class="product-week__title">Вязаные корзинки</h2>
-        <span class="product-week__label">товар недели</span>
-        <p class="product-week__desc">
-          Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.
-        </p>
-        <table class="product-week__properties">
-          <tr>
-            <td>Цвет:</td>
-            <td>«Тиффани»/серый</td>
-          </tr>
-          <tr>
-            <td>Диаметр:</td>
-            <td>25 см</td>
-          </tr>
-          <tr>
-            <td>Высота:</td>
-            <td>15 см</td>
-          </tr>
-        </table>
-        <img src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязанные корзинки">
-        <b class="product-week__cy">Цена: 990 руб.</b>
-        <a class="btn  product-week__buy" href="#">Заказать</a>
+        <div class="product-week__wrapper">
+          <h2 class="product-week__title">Вязаные корзинки</h2>
+          <span class="product-week__label">товар недели</span>
+          <p class="product-week__desc">
+            Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.
+          </p>
+          <table class="product-week__properties">
+            <tr>
+              <td>Цвет:</td>
+              <td>«Тиффани»/серый</td>
+            </tr>
+            <tr>
+              <td>Диаметр:</td>
+              <td>25 см</td>
+            </tr>
+            <tr>
+              <td>Высота:</td>
+              <td>15 см</td>
+            </tr>
+          </table>
+          <img class="product-week__img" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязанные корзинки">
+          <b class="product-week__cy">Цена: 990 руб.</b>
+          <a class="btn  product-week__buy" href="#">Заказать</a>
+        </div>
       </section>
       <section class="about-us">
-        <h2 class="about-us__title">Коротко о нас:</h2>
-        <ul class="about-us__list-features">
-          <li class="about-us__item  about-us__item--ecology">Экологически чистые материалы</li>
-          <li class="about-us__item  about-us__item--price">Скандинавский стиль по российской цене</li>
-          <li class="about-us__item  about-us__item--like">Увеличивает лайки на фотографиях</li>
-          <li class="about-us__item  about-us__item--love">Связано вручную с любовью и умилением</li>
-          <li class="about-us__item  about-us__item--home">Поддержка отечественного производителя</li>
-          <li class="about-us__item  about-us__item--gift">Поставляется в подарочной упаковке</li>
-        </ul>
+        <div class="about-us__wrapper">
+          <h2 class="about-us__title">Коротко о нас:</h2>
+          <ul class="about-us__list-features">
+            <li class="about-us__item  about-us__item--ecology">Экологически чистые материалы</li>
+            <li class="about-us__item  about-us__item--price">Скандинавский стиль по российской цене</li>
+            <li class="about-us__item  about-us__item--like">Увеличивает лайки на фотографиях</li>
+            <li class="about-us__item  about-us__item--love">Связано вручную с любовью и умилением</li>
+            <li class="about-us__item  about-us__item--home">Поддержка отечественного производителя</li>
+            <li class="about-us__item  about-us__item--gift">Поставляется в подарочной упаковке</li>
+          </ul>
+        </div>
       </section>
       <section class="reviews">
-        <h2 class="reviews__title">Отзывы</h2>
-        <blockquote class="reviews__item">
-          <p class="reviews__text">
-            Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильнее, а также набирают больше лайков!
-          </p>
-          <cite class="reviews__author-name">Анастасия Красильникова</cite>
-          <span class="reviews__author-nickname">@misssssiskras</span>
-        </blockquote>
-        <div class="reviews__arrows">
-          <a class="reviews__arrow  reviews__arrow--prev" href="#">назад</a>
-          <a class="reviews__arrow  reviews__arrow--next" href="#">вперед</a>
+        <div class="reviews__wrapper">
+          <h2 class="reviews__title">Отзывы</h2>
+          <blockquote class="reviews__item">
+            <p class="reviews__text">
+              Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильнее, а также набирают больше лайков!
+            </p>
+            <cite class="reviews__author-name">Анастасия Красильникова</cite>
+            <span class="reviews__author-nickname">@misssssiskras</span>
+          </blockquote>
+          <div class="reviews__arrows">
+            <a class="reviews__arrow  reviews__arrow--prev" href="#">назад</a>
+            <a class="reviews__arrow  reviews__arrow--next" href="#">вперед</a>
+          </div>
+          <a class="btn  reviews__write" href="#">Написать</a>
         </div>
-        <a class="btn  reviews__write" href="#">Написать</a>
       </section>
       <section class="contacts">
-        <h2 class="contacts__title">Контакты</h2>
-        <table class="contacts__content">
-          <tr>
-            <td>email:</td>
-            <td><a class="contacts__content-link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></td>
-          </tr>
-          <tr>
-            <td>адрес:</td>
-            <td>г. Санкт-Петербург,<br>ул. Большая Конюшенная,<br>д. 19/8, офис 101</td>
-          </tr>
-        </table>
-        <img src="img/map-mobile@1x.jpg" width="320" height="457" alt="Интернет-магазин «Мишка»">
-        <a class="btn  contacts__write-us" href="#">Напишите нам</a>
+        <div class="contacts__wrapper">
+          <h2 class="contacts__title">Контакты</h2>
+          <table class="contacts__content">
+            <tr>
+              <td>email:</td>
+              <td><a class="contacts__content-link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></td>
+            </tr>
+            <tr>
+              <td>адрес:</td>
+              <td>г. Санкт-Петербург,<br>ул. Большая Конюшенная,<br>д. 19/8, офис 101</td>
+            </tr>
+          </table>
+          <img class="contacts__map" src="img/map-mobile@1x.jpg" width="320" height="457" alt="Интернет-магазин «Мишка»">
+          <a class="btn  contacts__write-us" href="#">Напишите нам</a>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
-      <div class="social">
-        <a class="social-btn  social-btn--instagram" href="#">Instagram</a>
-        <a class="social-btn  social-btn--facebook" href="#">Facebook</a>
-        <a class="social-btn  social-btn--twitter" href="#">Twitter</a>
-      </div>
-      <div class="copyright">
-        <span class="copyright__text">Разработано</span>
-        <a class="copyright__link" href="htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width="27" height="34" alt="HTML Academy"></a>
+      <div class="page-footer__wrapper">
+        <div class="logo  logo--footer">
+          <a href="#">
+            <img src="img/logo-mobile.svg" width="86" height="35" alt="Интернет-магазин «Мишка»">
+          </a>
+        </div>
+        <div class="social">
+          <a class="social-btn  social-btn--instagram" href="#">Instagram</a>
+          <a class="social-btn  social-btn--facebook" href="#">Facebook</a>
+          <a class="social-btn  social-btn--twitter" href="#">Twitter</a>
+        </div>
+        <div class="copyright">
+          <span class="copyright__text">Разработано</span>
+          <a class="copyright__link" href="htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width="27" height="34" alt="HTML Academy"></a>
+        </div>
       </div>
     </footer>
     <div class="modal-overlay"></div>
@@ -127,5 +161,6 @@
         <button class="modal-size__add" type="submit">Добавить</button>
       </form>
     </div>
+    <script src="js/mobile-menu.js"></script>
   </body>
 </html>
