--- a/catalog.html
+++ b/catalog.html
@@ -7,44 +7,63 @@
   </head>
   <body>
     <header class="page-header">
-      <section class="page-header__top-menu">
-        <div class="logo">
-          <a class="logo__link" href="index.html"><img src="img/logo-mobile.svg" width="86" height="35" alt="Интернет-магазин «Мишка»"></a>
-        </div>
-        <nav class="main-nav">
-          <!--button class="main-nav__toggle" type="button">Меню</button-->
-          <div class="main-nav__wrapper">
-            <ul class="main-nav__menu-list">
-              <li class="main-nav__menu-item"><a class="main-nav__menu-link" href="catalog.html">Каталог товаров</a></li>
-              <li class="main-nav__menu-item"><a class="main-nav__menu-link" href="form.html">Вязания на заказ</a></li>
-            </ul>
-            <ul class="main-nav__menu-list">
-              <li class="main-nav__menu-item"><a class="main-nav__menu-link  main-nav__menu-link--search" href="#">Поиск по сайту</a></li>
-              <li class="main-nav__menu-item"><a class="main-nav__menu-link  main-nav__menu-link--cart" href="#">Корзина: пока пуста</a></li>
-            </ul>
+      <nav class="main-nav  main-nav--closed  main-nav--nojs">
+        <button class="main-nav__toggle" type="button">Меню</button>
+        <div class="main-nav__wrapper">
+          <div class="logo  logo--header">
+            <a href="index.html">
+              <img src="img/logo-mobile.svg" width="86" height="35" alt="Интернет-магазин «Мишка»">
+            </a>
           </div>
-        </nav>
-      </section>
+          <ul class="main-nav__menu-list  main-nav__menu-list--main">
+            <li class="main-nav__menu-item">
+              <a class="main-nav__link" href="#">Каталог товаров</a>
+            </li>
+            <li class="main-nav__menu-item">
+              <a class="main-nav__link" href="form.html">Вязание на заказ</a>
+            </li>
+          </ul>
+          <ul class="main-nav__menu-list  main-nav__menu-list--user">
+            <li class="main-nav__menu-item">
+              <a class="main-nav__link  main-nav__link--search" href="#">Поиск по сайту</a>
+            </li>
+            <li class="main-nav__menu-item">
+              <a class="main-nav__link  main-nav__link--cart" href="#">Корзина: пока пуста</a>
+            </li>
+          </ul>
+          <ul class="main-nav__special">
+            <li class="main-nav__special-item">
+              <a class="main-nav__link" href="#">Новые поступления</a>
+            </li>
+            <li class="main-nav__special-item">
+              <a class="main-nav__link" href="#">Распродажа</a>
+            </li>
+          </ul>
+          <span class="main-nav__label">Бесплатная доставка по России</span>
+        </div>
+      </nav>
     </header>
     <main>
-      <h1 class="page-title">Каталог товаров</h1>
+      <section class="page-title">
+        <h1 class="page-title__label">Каталог товаров</h1>
+      </section>
       <section class="product-catalog">
         <article class="product">
-          <a href="#"><img src="img/photo-1-mobile@1x.jpg" width="260" height="195" alt="Зайчик-попрыгайчик"></a>
+          <a href="#"><img class="product__img" src="img/photo-1-mobile@1x.jpg" width="260" height="195" alt="Зайчик-попрыгайчик"></a>
           <a class="product__title" href="#">Зайчик-попрыгайчик</a>
           <span class="product__properties">Рост 30 см, вес 200 г</span>
           <b class="product__cy">1 200 руб.</b>
           <a class="product__buy" href="#"><img src="img/icon-cart.svg" width="21" height="19" alt="Заказать"></a>
         </article>
         <article class="product">
-          <a href="#"><img src="img/photo-2-mobile@1x.jpg" width="260" height="195" alt="Корзинка для белья"></a>
+          <a href="#"><img class="product__img" src="img/photo-2-mobile@1x.jpg" width="260" height="195" alt="Корзинка для белья"></a>
           <a class="product__title" href="#">Корзинка для белья</a>
           <span class="product__properties">Диаметр 15 см, высота 10 см</span>
           <b class="product__cy">690 руб.</b>
           <a class="product__buy" href="#"><img src="img/icon-cart.svg" width="21" height="19" alt="Заказать"></a>
         </article>
         <article class="product">
-          <a href="#"><img src="img/photo-3-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек"></a>
+          <a href="#"><img class="product__img" src="img/photo-3-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек"></a>
           <a class="product__title" href="#">Большая корзинка для игрушек</a>
           <span class="product__properties">Диаметр 30 см, высота 30 см</span>
           <b class="product__cy">1 500 руб.</b>
@@ -53,22 +72,30 @@
       </section>
       <section class="production">
         <b class="production__title">Процесс производства</b>
-        <video controls preload="metadata" width="260" height="150" poster="img/video-mobile@1x.jpg"></video>
+        <!--video controls preload="metadata" width="260" height="150" poster="img/video-mobile@1x.jpg"></video-->
+        <img class="production__video" src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства">
         <p class="production__desc">
-          По просьбам наших фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
+          По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
         </p>
         <a class="btn production__order" href="#">Сделать заказ</a>
       </section>
     </main>
     <footer class="page-footer">
-      <div class="social">
-        <a class="social-btn  social-btn--instagram" href="#">Instagram</a>
-        <a class="social-btn  social-btn--facebook" href="#">Facebook</a>
-        <a class="social-btn  social-btn--twitter" href="#">Twitter</a>
-      </div>
-      <div class="copyright">
-        <span class="copyright__text">Разработано</span>
-        <a class="copyright__link" href="htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width="27" height="34" alt="HTML Academy"></a>
+      <div class="page-footer__wrapper">
+        <div class="logo  logo--footer">
+          <a href="index.html">
+            <img src="img/logo-mobile.svg" width="86" height="35" alt="Интернет-магазин «Мишка»">
+          </a>
+        </div>
+        <div class="social">
+          <a class="social-btn  social-btn--instagram" href="#">Instagram</a>
+          <a class="social-btn  social-btn--facebook" href="#">Facebook</a>
+          <a class="social-btn  social-btn--twitter" href="#">Twitter</a>
+        </div>
+        <div class="copyright">
+          <span class="copyright__text">Разработано</span>
+          <a class="copyright__link" href="htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width="27" height="34" alt="HTML Academy"></a>
+        </div>
       </div>
     </footer>
     <div class="modal-overlay"></div>
@@ -87,5 +114,6 @@
         <button class="modal-size__add" type="submit">Добавить</button>
       </form>
     </div>
+    <script src="js/mobile-menu.js"></script>
   </body>
 </html>
